# taotie

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Untitled Diagram.drawio  arxiv_author.json  arxiv_author.json.template  dev_setup.sh  mypy.ini  pull_request_template.md  pyproject.toml
.github/workflows/: test-build.yml
examples/: info_printer.py  info_summarizer.py
examples/summarize_to_notion/: Dockerfile  docker-compose.yml  example.py  redis.conf
taotie/: arxiv_author.json  entity.py  gatherer.py  message_queue.py  orchestrator.py  test.py  tools.py  utils.py
taotie/consumer/: base.py  info_summarizer.py  print_consumer.py  simple_summarizer.py
taotie/reporter/: base_reporter.py  notion_reporter.py
taotie/sources/: arxiv.py  base.py  github.py  http_service.py  huggingface.py  twitter.py
taotie/storage/: base.py  memory.py  notion.py
taotie/tests/: test_utils.py
taotie/tests/utils/: test_utils.py
taotie/utils/: tools.py  utils.py
