[tool.poetry]
name = "taotie"
version = "0.0.1"
description = "Let taotie be your helper to consume the information."
authors = ["Yx Jiang <2237303+yxjiang@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
tweepy = "^4.13.0"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
bs4 = "^0.0.1"
openai = ">=0.27"
flask = "^2.2.3"
unstructured = "^0.5.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
