[tool.poetry]
name = "taotie"
version = "0.0.1"
description = "Let taotie be your helper to consume the information."
authors = ["Yx Jiang <2237303+yxjiang@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.14.0"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
bs4 = "^0.0.1"
openai = "^0.27.4"
flask = "^2.2.3"
unstructured = "^0.5.12"
notion-client = "^2.0.0"
pre-commit = "^3.2.2"
quart = "^0.18.4"
types-pytz = "^2023.3.0.0"
redis = "^4.5.4"
types-redis = "^4.5.4.1"
rdflib = "^6.3.2"
matplotlib = "^3.7.1"
networkx = "^3.1"
retrying = "^1.3.4"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pre-commit = "^3.2.2"
types-requests = "^2.28.11.17"
types-pytz = "^2023.3.0.0"
types-beautifulsoup4 = "^4.12.0.3"
types-colorama = "^0.4.15.11"
coverage = "^7.2.3"
asynctest = "^0.13.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
